--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
     .row { display: flex; align-items: center; gap: 10px; flex-wrap: wrap; }
 
     /* Responsive */
-    @media (max-width: 900px) {
+    #themeBtn {
+  display: block;
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
       .hero { grid-template-columns: 1fr; }
       .about { grid-template-columns: 1fr; }
       .grid { grid-template-columns: 1fr 1fr; }
@@ -97,7 +101,8 @@
     <div class="container nav">
       <nav class="row">
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
+        <a href="#projects">Project</a>
+        <a href="#experiences">Experience</a>
         <a href="#contact">Contact</a>
         <button class="btn" id="themeBtn" aria-label="Toggle theme">Toggle Theme</button>
       </nav>
@@ -107,7 +112,7 @@
   <main class="container">
     <section class="hero">
       <div>
-        <h1>Hello there, I’m Arga — a learner with no regrets</h1>
+        <h1>Hello there, I’m Arga</h1>
         <p>I’m a mechanical engineering grad exploring software, design, and anything that sparks curiosity. — welcome</p>
         <div class="row">
           <a class="btn" href="#projects">See Projects</a>
@@ -123,7 +128,10 @@
       <h2 class="section-title"><span class="tiny"></span> About Me</h2>
       <div class="about">
         <div class="panel">
-          <p>My name <strong>Hafiyyan Arga Putra Yudistira</strong>. I enjoy learning new things — from HTML/CSS basics to real-world problem solving. I like clean layouts, good vibes, and building small projects that actually work.</p>
+          <p>My name is <strong>Hafiyyan Arga Putra Yudistira</strong>. I'm Highly adaptable Mechanical Engineering graduate with strong analytical and problem-solving skills.
+Experienced in managing technical tasks and coordinating operations within demanding work
+environments. Known for reliability, efficiency, and quick learning. Seeking opportunities to contribute to
+organizational growth while developing professional expertise in a dynamic corporate setting.</p>
         </div>
         <div class="panel">
           <p><strong>Currently learning:</strong> HTML, CSS, basic JavaScript. <br/>
@@ -162,7 +170,7 @@
         <article class="card">
           <div class="thumb1" aria-hidden="true"></div>
           <div class="content">
-            <h3>On Job Training at PT. Telenetina STU</h3>
+            <h3>On Job Training at <a href="https://www.telenetina-bandung.co.id/">PT. Telenetina STU</a></h3>
             <p class="subtle">"PKL" Experience. Focusing on Aeromodelling production and wind turbine power plant. Gained knowledge about Safety in work environment, Aerodynamic, Hand tools.</p>
             <div class="row">
             </div>
@@ -171,7 +179,7 @@
         <article class="card">
           <div class="thumb2" aria-hidden="true"></div>
           <div class="content">
-            <h3>On Job Training at PT ASI Pudjiastuti Aviation</h3>
+            <h3>On Job Training at <a href="https://susiair.com//">PT. ASI Pudjiastuti Aviation</a></h3>
             <p class="subtle">Experience as Ground Crew and Airport service staff at Pangandaran. Gained knowledge about basic aircraft handling, Airport service, DG, etc.</p>
             <div class="row">        
             </div>
