--- a/index.html
+++ b/index.html
@@ -128,9 +128,12 @@
       <h2 class="section-title"><span class="tiny"></span> About Me</h2>
       <div class="about">
         <div class="panel">
-          <p>My name is <strong>Hafiyyan Arga Putra Yudistira</strong>. I'm Highly adaptable Mechanical Engineering graduate with strong analytical and problem-solving skills.
-Experienced in managing technical tasks and coordinating operations within demanding work
-environments. Known for reliability, efficiency, and quick learning. Seeking opportunities to contribute to
+          <p>My name is <strong>Hafiyyan Arga Putra Yudistira</strong>. I'm Highly adaptable Mechanical Engineering graduate with strong analytical and problem-solving skills.
+
+Experienced in managing technical tasks and coordinating operations within demanding work
+
+environments. Known for reliability, efficiency, and quick learning. Seeking opportunities to contribute to
+
 organizational growth while developing professional expertise in a dynamic corporate setting.</p>
         </div>
         <div class="panel">
@@ -179,7 +182,7 @@ organizational growth while developing professional expertise in a dynamic corpo
         <article class="card">
           <div class="thumb2" aria-hidden="true"></div>
           <div class="content">
-            <h3>On Job Training at <a href="https://susiair.com//">PT. ASI Pudjiastuti Aviation</a></h3>
+            <h3>On Job Training at <a href="https://susiair.com/">PT. ASI Pudjiastuti Aviation</a></h3>
             <p class="subtle">Experience as Ground Crew and Airport service staff at Pangandaran. Gained knowledge about basic aircraft handling, Airport service, DG, etc.</p>
             <div class="row">        
             </div>
@@ -254,3 +257,4 @@ organizational growth while developing professional expertise in a dynamic corpo
   </script>
 </body>
 </html>
+
