--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ organizational growth while developing professional expertise in a dynamic corpo
         <article class="card">
           <div class="thumb2" aria-hidden="true"></div>
           <div class="content">
-            <h3>On Job Training at <a href="https://susiair.com/">PT. ASI Pudjiastuti Aviation</a></h3>
+            <h3>On Job Training at <a href="https://susiair.com">PT. ASI Pudjiastuti Aviation</a></h3>
             <p class="subtle">Experience as Ground Crew and Airport service staff at Pangandaran. Gained knowledge about basic aircraft handling, Airport service, DG, etc.</p>
             <div class="row">        
             </div>
@@ -257,4 +257,5 @@ organizational growth while developing professional expertise in a dynamic corpo
   </script>
 </body>
 </html>
+
 
