--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ organizational growth while developing professional expertise in a dynamic corpo
           </div>
           <div class="field">
             <label for="email">Email</label>
-            <input id="email" type="email" class="input" placeholder="you@example.com" required />
+            <input id="email" type="email" class="input" placeholder="exampe@gmail.com" required />
           </div>
           <div class="field">
             <label for="msg">Message</label>
@@ -257,5 +257,3 @@ organizational growth while developing professional expertise in a dynamic corpo
   </script>
 </body>
 </html>
-
-
