--- a/index.html
+++ b/index.html
@@ -94,6 +94,44 @@
     @media (max-width: 560px) {
       .grid { grid-template-columns: 1fr; }
     }
+    .hero-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+}
+
+/* make avatar float over the slideshow */
+.avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: url("https://i.postimg.cc/MGRgzWkW/XII-ACM-1-09-HAFIYYAN-ARGA-PUTRA-YUDISTIRA-copy.jpg") center top/cover no-repeat;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.3);
+  position: absolute;
+  top: 60px; /* adjust overlap height */
+  z-index: 2;
+  border: 4px solid var(--panel); /* neat border ring */
+}
+
+..gallery {
+  margin-top: 20px; /* or even 10px if you want it tighter */
+  display: flex;
+  justify-content: center;
+}
+
+.gallery img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 14px;
+  box-shadow: 0 12px 30px rgba(0,0,0,.3);
+  opacity: 1;
+  transition: opacity .6s ease;
+}
+.gallery img.fade { opacity: 0; }
   </style>
 </head>
 <body>
@@ -120,8 +158,15 @@
         </div>
       </div>
       <div class="hero-card">
-        <div class="avatar" aria-hidden="true"></div>
-      </div>
+  <div class="avatar" aria-hidden="true"></div>
+
+  <!-- add this block ↓ under the avatar -->
+  <div class="gallery">
+    <img id="galleryImg"
+         src="https://i.postimg.cc/1zjB3rY6/Picsart-25-10-24-21-55-51-059.jpg"
+         alt="Gallery">
+  </div>
+</div>
     </section>
 
     <section id="about">
@@ -254,6 +299,22 @@ organizational growth while developing professional expertise in a dynamic corpo
         }
       });
     });
+    // --- auto slideshow under avatar ---
+const pics = [
+  "https://i.postimg.cc/6Qnq89Hs/IMG-20250515-WA0153.jpg",
+  "https://i.postimg.cc/sXMnYNZ4/Picsart-25-10-24-21-52-50-834.jpg",
+  "https://i.postimg.cc/4NsSMBCN/IMG-20250126-WA0055-2.jpg"
+];
+
+const imgEl = document.getElementById("galleryImg");
+pics.forEach(src => { const i = new Image(); i.src = src; }); // preload
+
+let i = 0;
+setInterval(() => {
+  i = (i + 1) % pics.length;
+  imgEl.classList.add("fade");
+  setTimeout(() => { imgEl.src = pics[i]; imgEl.classList.remove("fade"); }, 300);
+}, 3000); // 3s between pics
   </script>
 </body>
 </html>
