--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background: url("https://i.postimg.cc/MGRgzWkW/XII-ACM-1-09-HAFIYYAN-ARGA-PUTRA-YUDISTIRA-copy.jpg") center top/cover no-repeat;
+  background: url("aset/img/arga pantai 1.jpg") center top/cover no-repeat;
   box-shadow: 0 12px 30px rgba(0,0,0,0.3);
   position: absolute;
   top: 60px; /* adjust overlap height */
@@ -301,9 +301,9 @@ organizational growth while developing professional expertise in a dynamic corpo
     });
     // --- auto slideshow under avatar ---
 const pics = [
-  "https://i.postimg.cc/6Qnq89Hs/IMG-20250515-WA0153.jpg",
-  "https://i.postimg.cc/sXMnYNZ4/Picsart-25-10-24-21-52-50-834.jpg",
-  "https://i.postimg.cc/4NsSMBCN/IMG-20250126-WA0055-2.jpg"
+  "aset/img/arga pantai 2.jpg",
+  "aset/img/trio.jpg",
+  "aset/img/trio 2.jpg"
 ];
 
 const imgEl = document.getElementById("galleryImg");
@@ -318,3 +318,4 @@ setInterval(() => {
   </script>
 </body>
 </html>
+
