--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   height: 140px;
 
-  background: url("aset/img/smk.jpg") center/cover no-repeat;
+  background: url("aset/img/smk.JPG") center/cover no-repeat;
 
 }
 
@@ -262,7 +262,7 @@
 
 .gallery {
 
-  margin-top: 20px; /* or even 10px if you want it tighter */
+  margin-top: 7px; /* or even 10px if you want it tighter */
 
   display: flex;
 
@@ -354,7 +354,7 @@
 
     <img id="galleryImg"
 
-         src="aset/img/gunung.jpg"
+         src="aset/img/.jpg"
 
          alt="Gallery">
 
@@ -662,11 +662,15 @@ organizational growth while developing professional expertise in a dynamic corpo
 
 const pics = [
 
-  "aset/img/arga pantai 2.jpg",
+  "aset/img/sa2.jpg",
 
-  "aset/img/trio.jpg",
+  "aset/img/sa3.jpg",
 
-  "aset/img/trio 2.jpg"
+  "aset/img/tele1.jpg"
+  
+  "aset/img/tele2.jpg"
+  
+  "aset/img/tele3.jpg"
 
 ];
 
