--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   height: 140px;
 
-  background: url("aset/img/smk.JPG") center/cover no-repeat;
+  background: url("aset/img/smk.JPG") center bottom/cover no-repeat;
 
 }
 
@@ -244,7 +244,7 @@
 
   border-radius: 50%;
 
-  background: url("aset/img/arga pantai 1.jpg") center top/cover no-repeat;
+  background: url("aset/img/sa1.jpg") center/cover no-repeat;
 
   box-shadow: 0 12px 30px rgba(0,0,0,0.3);
 
