--- a/index.html
+++ b/index.html
@@ -662,15 +662,17 @@ organizational growth while developing professional expertise in a dynamic corpo
 
 const pics = [
 
-  "aset/img/sa2.jpg",
+   "aset/img/sa1.jpg",
+
+   "aset/img/sa2.jpg",
 
   "aset/img/sa3.jpg",
 
-  "aset/img/tele1.jpg"
+  "aset/img/tele1.jpg",
   
-  "aset/img/tele2.jpg"
+  "aset/img/tele2.jpg",
   
-  "aset/img/tele3.jpg"
+  "aset/img/tele3.jpg",
 
 ];
 
