--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   border-radius: 50%;
 
-  background: url("https://i.postimg.cc/MGRgzWkW/XII-ACM-1-09-HAFIYYAN-ARGA-PUTRA-YUDISTIRA-copy.jpg") center top/cover no-repeat;
+  background: url("aset/img/profil.jpg") center top/cover no-repeat;
 
   box-shadow: 0 12px 30px rgba(0,0,0,0.3);
 
@@ -125,7 +125,7 @@
 
   height: 140px;
 
-  background: url("https://i.postimg.cc/28yczngn/IMG-20250304-WA0008.jpg") center top 25%/cover no-repeat;
+  background: url("aset/img/logo tele.jpg") center top 25%/cover no-repeat;
 
 }
 
@@ -133,21 +133,7 @@
 
   height: 140px;
 
-  background: url("https://i.postimg.cc/NFKstpXp/images.png") center/cover no-repeat;
-
-}
-.thumb3 {
-
-  height: 140px;
-
-  background: url("aset/img/sd.jpg") center/cover no-repeat;
-
-}
-.thumb4 {
-
-  height: 140px;
-
-  background: url("aset/img/mts.jpg") center/cover no-repeat;
+  background: url("aset/img/logo sa.png") center/cover no-repeat;
 
 }
 .thumb5 {
@@ -307,6 +293,8 @@
         <a href="#about">About</a>
 
         <a href="#projects">Project</a>
+        
+        <a href="#education">Education</a>
 
         <a href="#experiences">Experience</a>
 
@@ -433,6 +421,9 @@ organizational growth while developing professional expertise in a dynamic corpo
           </div>
 
         </article>
+        </div>
+</section>
+
 
         <article class="card">
 
@@ -451,6 +442,9 @@ organizational growth while developing professional expertise in a dynamic corpo
           </div>
 
         </article>
+        </div>
+</section>
+
         
       <section id="education">
 
@@ -474,7 +468,10 @@ organizational growth while developing professional expertise in a dynamic corpo
 
           </div>
 
-        </article>  
+        </article> 
+ </div>
+</section>
+
 
      <section id="experiences">
 
