--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
           <a class="btn" href="#projects">See Projects</a>
 
-          <a href="#contact">Email me</a>
+          <a href="#contact">Give me Ideas</a>
 
         </div>
 
